[package]
name = "retro3d"
version = "0.1.0"
authors = ["Andreas Arvidsson <andreas.arvidson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
pixels = "0.2.0"
winit = "0.22.0"
winit_input_helper = "0.6.0"
